Add sources of auroramc-gamble plugin to our monolith; Add missing runtime loadable dependencies

--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-bukkit/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ main: pl.auroramc.dailyrewards.DailyRewardsBukkitPlugin
 name: auroramc-daily-rewards
 version: ${project.version}
 authors: [ shitzuu <hello@rafal.moe> ]
-api-version: "1.20"
+api-version: 1.20
 depend:
   - auroramc-registry
 libraries:
