--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-economy/auroramc-economy-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-economy/auroramc-economy-bukkit/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 main: pl.auroramc.economy.EconomyBukkitPlugin
 name: auroramc-economy
 version: ${project.version}
-authors: [ "shitzuu <hello@rafal.moe>" ]
+authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 depend:
   - auroramc-registry
