--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -17,6 +17,7 @@
     <module>auroramc-daily-rewards</module>
     <module>auroramc-economy</module>
     <module>auroramc-essentials</module>
+    <module>auroramc-gamble</module>
     <module>auroramc-hoppers</module>
     <module>auroramc-lobby</module>
     <module>auroramc-quests</module>
