--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -23,6 +23,7 @@
     <module>auroramc-quests</module>
     <module>auroramc-registry</module>
     <module>auroramc-scoreboard</module>
+    <module>auroramc-shops</module>
   </modules>
 
   <properties>
