--- a/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-bukkit/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-bukkit/pom.xml
@@ -48,6 +48,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>dev.rollczi.litecommands</groupId>
+      <artifactId>core</artifactId>
+      <version>2.9.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.github.stefvanschie.inventoryframework</groupId>
       <artifactId>IF</artifactId>
       <version>0.10.13</version>
