--- a/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-core/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-core/pom.xml
@@ -17,6 +17,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-core</artifactId>
+      <version>3.4.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>net.kyori</groupId>
       <artifactId>adventure-api</artifactId>
       <version>4.16.0</version>
