--- a/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/auroramc-auth-velocity/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/auroramc-auth-velocity/pom.xml
@@ -103,9 +103,9 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>dev.rollczi.litecommands</groupId>
-      <artifactId>velocity</artifactId>
-      <version>2.9.0-SNAPSHOT</version>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-velocity</artifactId>
+      <version>3.4.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
