--- a/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-bukkit/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-bukkit/pom.xml
@@ -15,6 +15,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <repositories>
+    <repository>
+      <id>placeholderapi-repo</id>
+      <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+    </repository>
+  </repositories>
+
   <dependencies>
     <dependency>
       <groupId>pl.auroramc</groupId>
@@ -50,6 +57,12 @@
       <groupId>com.github.stefvanschie.inventoryframework</groupId>
       <artifactId>IF</artifactId>
       <version>0.10.13</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>me.clip</groupId>
+      <artifactId>placeholderapi</artifactId>
+      <version>2.11.5</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
