--- a/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/auroramc-auth-velocity/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/auroramc-auth-velocity/pom.xml
@@ -17,10 +17,10 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
-      <version>8.3.0</version>
-      <scope>runtime</scope>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>3.3.3</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>pl.auroramc</groupId>
