--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-cheque/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-cheque/src/main/resources/plugin.yml
@@ -7,5 +7,6 @@ depend:
   - auroramc-registry
   - auroramc-economy
 libraries:
+  - org.mariadb.jdbc:mariadb-java-client:3.3.3
   - com.github.ben-manes.caffeine:caffeine:3.1.8
   - com.spotify:completable-futures:0.3.6
