--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-bukkit/src/main/resources/plugin.yml
@@ -6,4 +6,5 @@ api-version: 1.20
 depend:
   - auroramc-registry
 libraries:
+  - org.mariadb.jdbc:mariadb-java-client:3.3.3
   - com.github.ben-manes.caffeine:caffeine:3.1.8
