--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-economy/auroramc-economy-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-economy/auroramc-economy-bukkit/src/main/resources/plugin.yml
@@ -8,6 +8,7 @@ depend:
 softdepend:
   - PlaceholderAPI
 libraries:
+  - org.mariadb.jdbc:mariadb-java-client:3.3.3
   - io.javalin:javalin:6.1.3
   - com.spotify:completable-futures:0.3.6
   - com.github.ben-manes.caffeine:caffeine:3.1.8
