--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-registry/auroramc-registry-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-registry/auroramc-registry-bukkit/src/main/resources/plugin.yml
@@ -4,4 +4,5 @@ version: ${project.version}
 authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 libraries:
+  - org.mariadb.jdbc:mariadb-java-client:3.3.3
   - com.github.ben-manes.caffeine:caffeine:3.1.8
