--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-cheque/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-cheque/pom.xml
@@ -47,9 +47,15 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>dev.rollczi.litecommands</groupId>
-      <artifactId>bukkit-adventure</artifactId>
-      <version>2.9.0-SNAPSHOT</version>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-bukkit</artifactId>
+      <version>3.4.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-adventure-platform</artifactId>
+      <version>3.4.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
