--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-hoppers/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-hoppers/pom.xml
@@ -23,9 +23,15 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>dev.rollczi.litecommands</groupId>
-      <artifactId>bukkit-adventure</artifactId>
-      <version>2.9.0-SNAPSHOT</version>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-bukkit</artifactId>
+      <version>3.4.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-adventure-platform</artifactId>
+      <version>3.4.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -41,5 +47,36 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.5.2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <relocations>
+                <relocation>
+                  <pattern>com.jeff_media.customblockdata</pattern>
+                  <shadedPattern>pl.auroramc.hoppers.library.com.jeff_media.customblockdata</shadedPattern>
+                </relocation>
+              </relocations>
+            </configuration>
+          </execution>
+        </executions>
+        <configuration>
+          <dependencyReducedPomLocation>
+            ${project.build.directory}/dependency-reduced-pom.xml
+          </dependencyReducedPomLocation>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
