--- a/auroramc-network-shared/auroramc-network-shared-server/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-server/pom.xml
@@ -12,11 +12,28 @@
   <artifactId>auroramc-network-shared-server</artifactId>
   <packaging>pom</packaging>
   <modules>
+    <module>auroramc-iridium</module>
     <module>auroramc-nametags</module>
   </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>papermc-repo</id>
+      <url>https://repo.papermc.io/repository/maven-public/</url>
+    </repository>
+  </repositories>
+
+  <dependencies>
+    <dependency>
+      <groupId>io.papermc.paper</groupId>
+      <artifactId>paper-api</artifactId>
+      <version>1.20.4-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
 </project>
