--- a/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-core/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-core/pom.xml
@@ -23,6 +23,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <version>3.1.8</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>net.kyori</groupId>
       <artifactId>adventure-api</artifactId>
       <version>4.16.0</version>
