--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-bazaars/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-bazaars/src/main/resources/plugin.yml
@@ -6,3 +6,5 @@ api-version: 1.20
 depend:
   - auroramc-registry
   - auroramc-economy
+libraries:
+  - com.github.ben-manes.caffeine:caffeine:3.1.8
