--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-gamble/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-gamble/src/main/resources/plugin.yml
@@ -5,3 +5,5 @@ authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 depend:
   - auroramc-economy
+libraries:
+  - com.github.ben-manes.caffeine:caffeine:3.1.8
