--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-lobby/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-lobby/src/main/resources/plugin.yml
@@ -3,3 +3,5 @@ name: auroramc-lobby
 version: ${project.version}
 authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
+libraries:
+  - com.github.ben-manes.caffeine:caffeine:3.1.8
