--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-shops/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-shops/src/main/resources/plugin.yml
@@ -7,4 +7,5 @@ depend:
   - auroramc-economy
 libraries:
   - org.apache.groovy:groovy-jsr223:5.0.0-alpha-7
+  - com.github.ben-manes.caffeine:caffeine:3.1.8
   - com.github.stefvanschie.inventoryframework:IF:0.10.13
