--- a/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-config/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-global/auroramc-commons/auroramc-commons-config/pom.xml
@@ -23,6 +23,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>moe.rafal</groupId>
+      <artifactId>juliet</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>eu.okaeri</groupId>
       <artifactId>okaeri-configs-serdes-commons</artifactId>
       <version>5.0.1</version>
@@ -35,9 +41,15 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>moe.rafal</groupId>
-      <artifactId>juliet</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>net.kyori</groupId>
+      <artifactId>adventure-api</artifactId>
+      <version>4.16.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>net.kyori</groupId>
+      <artifactId>adventure-text-minimessage</artifactId>
+      <version>4.16.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
