Add delegated methods for mutable message compilation to deliverable mutable message; Fix performance of sending messages with consideration of audience's preferences

--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-auctions/auroramc-auctions-bukkit/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-auctions/auroramc-auctions-bukkit/pom.xml
@@ -59,6 +59,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.spotify</groupId>
+      <artifactId>completable-futures</artifactId>
+      <version>0.3.6</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.github.stefvanschie.inventoryframework</groupId>
       <artifactId>IF</artifactId>
       <version>0.10.13</version>
