Use the latest version of auroramc-commons, auroramc-messages in auroramc-hoppers
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -19,7 +19,7 @@
 <!--    <module>auroramc-economy</module>-->
     <module>auroramc-essentials</module>
 <!--    <module>auroramc-gamble</module>-->
-<!--    <module>auroramc-hoppers</module>-->
+    <module>auroramc-hoppers</module>
     <module>auroramc-lobby</module>
 <!--    <module>auroramc-quests</module>-->
     <module>auroramc-registry</module>
