Use the latest version of auroramc-commons, auroramc-messages in auroramc-economy
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -16,7 +16,7 @@
 <!--    <module>auroramc-bazaars</module>-->
 <!--    <module>auroramc-cheque</module>-->
     <module>auroramc-daily-rewards</module>
-<!--    <module>auroramc-economy</module>-->
+    <module>auroramc-economy</module>
     <module>auroramc-essentials</module>
 <!--    <module>auroramc-gamble</module>-->
     <module>auroramc-hoppers</module>
