--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-economy/auroramc-economy-bukkit/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-economy/auroramc-economy-bukkit/pom.xml
@@ -24,15 +24,15 @@
     </dependency>
     <dependency>
       <groupId>pl.auroramc</groupId>
-      <artifactId>auroramc-commons-bukkit</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>pl.auroramc</groupId>
       <artifactId>auroramc-registry-shared</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-commons-platform-bukkit</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>moe.rafal</groupId>
@@ -53,12 +53,6 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>io.javalin</groupId>
-      <artifactId>javalin</artifactId>
-      <version>6.1.3</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>com.spotify</groupId>
       <artifactId>completable-futures</artifactId>
       <version>0.3.6</version>
@@ -68,12 +62,6 @@
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
       <version>3.1.8</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.17.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
