--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-essentials/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-essentials/pom.xml
@@ -23,6 +23,18 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-registry-shared</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>moe.rafal</groupId>
+      <artifactId>juliet</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
       <version>3.1.8</version>
