--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-essentials/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-essentials/src/main/resources/plugin.yml
@@ -5,3 +5,4 @@ authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 libraries:
   - com.github.ben-manes.caffeine:caffeine:3.1.8
+  - org.mariadb.jdbc:mariadb-java-client:3.3.3
