Add git commit id to plugin version to allow for easier search for issues
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-gamble/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-gamble/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 main: pl.auroramc.gamble.GambleBukkitPlugin
 name: auroramc-gamble
-version: ${project.version}
+version: ${project.version}-${git.commit.id.abbrev}
 authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 depend:
