--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 main: pl.auroramc.dailyrewards.DailyRewardsBukkitPlugin
 name: auroramc-daily-rewards
-version: ${project.version}
+version: ${project.version}-${git.commit.id.abbrev}
 authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 depend:
