Use the latest version of auroramc-commons, auroramc-messages in auroramc-cheque
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -14,7 +14,7 @@
   <modules>
 <!--    <module>auroramc-auctions</module>-->
 <!--    <module>auroramc-bazaars</module>-->
-<!--    <module>auroramc-cheque</module>-->
+    <module>auroramc-cheque</module>
     <module>auroramc-daily-rewards</module>
     <module>auroramc-economy</module>
     <module>auroramc-essentials</module>
