Use the latest version of auroramc-commons, auroramc-messages in auroramc-bazaars
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -13,7 +13,7 @@
   <packaging>pom</packaging>
   <modules>
 <!--    <module>auroramc-auctions</module>-->
-<!--    <module>auroramc-bazaars</module>-->
+    <module>auroramc-bazaars</module>
     <module>auroramc-cheque</module>
     <module>auroramc-daily-rewards</module>
     <module>auroramc-economy</module>
