Use the latest version of auroramc-commons, auroramc-messages in auroramc-gamble
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -18,7 +18,7 @@
     <module>auroramc-daily-rewards</module>
     <module>auroramc-economy</module>
     <module>auroramc-essentials</module>
-<!--    <module>auroramc-gamble</module>-->
+    <module>auroramc-gamble</module>
     <module>auroramc-hoppers</module>
     <module>auroramc-lobby</module>
 <!--    <module>auroramc-quests</module>-->
