Fix code style inconsistencies
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-proxy/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-proxy/pom.xml
@@ -12,8 +12,8 @@
   <artifactId>auroramc-network-plugins-proxy</artifactId>
   <packaging>pom</packaging>
   <modules>
-    <module>auroramc-punishments</module>
-    <module>auroramc-auth</module>
+<!--    <module>auroramc-auth</module>-->
+<!--    <module>auroramc-punishments</module>-->
   </modules>
 
   <properties>
