--- a/auroramc-network-shared/auroramc-network-shared-server/auroramc-nametags/pom.xml
+++ b/auroramc-network-shared/auroramc-network-shared-server/auroramc-nametags/pom.xml
@@ -17,6 +17,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-commons-platform-bukkit</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>ca.bkaw</groupId>
       <artifactId>paper-nms</artifactId>
       <version>1.20.4-SNAPSHOT</version>
