Use the latest version of auroramc-commons, auroramc-messages in auroramc-shops
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -24,7 +24,7 @@
 <!--    <module>auroramc-quests</module>-->
     <module>auroramc-registry</module>
 <!--    <module>auroramc-scoreboard</module>-->
-<!--    <module>auroramc-shops</module>-->
+    <module>auroramc-shops</module>
   </modules>
 
   <properties>
