Use the latest version of auroramc-commons, auroramc-messages in auroramc-auctions
Signed-off-by: Rafał Chomczyk <hello@rafal.moe>

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>auroramc-network-plugins-server</artifactId>
   <packaging>pom</packaging>
   <modules>
-<!--    <module>auroramc-auctions</module>-->
+    <module>auroramc-auctions</module>
     <module>auroramc-bazaars</module>
     <module>auroramc-cheque</module>
     <module>auroramc-daily-rewards</module>
