--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-auctions/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-auctions/pom.xml
@@ -10,14 +10,66 @@
   </parent>
 
   <artifactId>auroramc-auctions</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>auroramc-auctions-shared</module>
-    <module>auroramc-auctions-bukkit</module>
-  </modules>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-commons-platform-bukkit</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-registry-shared</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-economy-shared</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>moe.rafal</groupId>
+      <artifactId>juliet</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-bukkit</artifactId>
+      <version>3.4.1</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>dev.rollczi</groupId>
+      <artifactId>litecommands-adventure-platform</artifactId>
+      <version>3.4.1</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
+      <version>3.1.8</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.spotify</groupId>
+      <artifactId>completable-futures</artifactId>
+      <version>0.3.6</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.stefvanschie.inventoryframework</groupId>
+      <artifactId>IF</artifactId>
+      <version>0.10.13</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
 </project>
