--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -21,7 +21,7 @@
     <module>auroramc-gamble</module>
     <module>auroramc-hoppers</module>
     <module>auroramc-lobby</module>
-<!--    <module>auroramc-quests</module>-->
+    <module>auroramc-quests</module>
     <module>auroramc-registry</module>
 <!--    <module>auroramc-scoreboard</module>-->
     <module>auroramc-shops</module>
