--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-quests/auroramc-quests-bukkit/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-quests/auroramc-quests-bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 main: pl.auroramc.quests.QuestsBukkitPlugin
 name: auroramc-quests
-version: ${project.parent.version}
+version: ${project.version}-${git.commit.id.abbrev}
 authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 depend:
