--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-essentials/src/main/resources/plugin.yml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-essentials/src/main/resources/plugin.yml
@@ -4,5 +4,6 @@ version: ${project.version}-${git.commit.id.abbrev}
 authors: [ shitzuu <hello@rafal.moe> ]
 api-version: 1.20
 libraries:
+  - it.unimi.dsi:sux4j:5.4.1
   - com.github.ben-manes.caffeine:caffeine:3.1.8
   - org.mariadb.jdbc:mariadb-java-client:3.3.3
