Add plugin to enhance functionality of creature spawners

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -27,6 +27,7 @@
     <module>auroramc-registry</module>
     <module>auroramc-scoreboard</module>
     <module>auroramc-shops</module>
+    <module>auroramc-spawners</module>
   </modules>
   <packaging>pom</packaging>
 
