--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-auctions/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-auctions/pom.xml
@@ -2,14 +2,8 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <artifactId>auroramc-quests-bukkit</artifactId>
+  <artifactId>auroramc-auctions</artifactId>
   <dependencies>
-    <dependency>
-      <artifactId>auroramc-quests-shared</artifactId>
-      <groupId>pl.auroramc</groupId>
-      <scope>compile</scope>
-      <version>${project.parent.version}</version>
-    </dependency>
     <dependency>
       <artifactId>auroramc-integrations-platform-bukkit</artifactId>
       <groupId>pl.auroramc</groupId>
@@ -17,19 +11,13 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <artifactId>auroramc-integrations-dsl</artifactId>
+      <artifactId>auroramc-registry-shared</artifactId>
       <groupId>pl.auroramc</groupId>
-      <scope>compile</scope>
+      <scope>provided</scope>
       <version>1.0-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <artifactId>groovy-jsr223</artifactId>
-          <groupId>org.apache.groovy</groupId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
-      <artifactId>auroramc-registry-shared</artifactId>
+      <artifactId>auroramc-economy-shared</artifactId>
       <groupId>pl.auroramc</groupId>
       <scope>provided</scope>
       <version>1.0-SNAPSHOT</version>
@@ -39,12 +27,6 @@
       <groupId>moe.rafal</groupId>
       <scope>compile</scope>
       <version>${dependency.version.juliet}</version>
-    </dependency>
-    <dependency>
-      <artifactId>IF</artifactId>
-      <groupId>com.github.stefvanschie.inventoryframework</groupId>
-      <scope>provided</scope>
-      <version>${dependency.version.inventoryframework}</version>
     </dependency>
     <dependency>
       <artifactId>litecommands-bukkit</artifactId>
@@ -59,29 +41,29 @@
       <version>${dependency.version.litecommands}</version>
     </dependency>
     <dependency>
-      <artifactId>classgraph</artifactId>
-      <groupId>io.github.classgraph</groupId>
-      <scope>provided</scope>
-      <version>${dependency.version.classgraph}</version>
-    </dependency>
-    <dependency>
       <artifactId>caffeine</artifactId>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <scope>provided</scope>
       <version>${dependency.version.caffeine}</version>
     </dependency>
     <dependency>
-      <artifactId>placeholderapi</artifactId>
-      <groupId>me.clip</groupId>
+      <artifactId>completable-futures</artifactId>
+      <groupId>com.spotify</groupId>
       <scope>provided</scope>
-      <version>${dependency.version.placeholderapi}</version>
+      <version>${dependency.version.completablefutures}</version>
+    </dependency>
+    <dependency>
+      <artifactId>IF</artifactId>
+      <groupId>com.github.stefvanschie.inventoryframework</groupId>
+      <scope>provided</scope>
+      <version>${dependency.version.inventoryframework}</version>
     </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>auroramc-quests</artifactId>
+    <artifactId>auroramc-network-plugins-server</artifactId>
     <groupId>pl.auroramc</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
