--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-spawners/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-spawners/pom.xml
@@ -11,6 +11,18 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <artifactId>auroramc-integrations-dsl</artifactId>
+      <groupId>pl.auroramc</groupId>
+      <scope>compile</scope>
+      <version>1.0-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>groovy-jsr223</artifactId>
+          <groupId>org.apache.groovy</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <artifactId>auroramc-economy-shared</artifactId>
       <groupId>pl.auroramc</groupId>
       <scope>provided</scope>
