--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -14,6 +14,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <modules>
+    <module>auroramc-auctions</module>
     <module>auroramc-bazaars</module>
     <module>auroramc-cheque</module>
     <module>auroramc-daily-rewards</module>
