--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-shared/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-daily-rewards/auroramc-daily-rewards-shared/pom.xml
@@ -15,4 +15,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-registry-shared</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
 </project>
