--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-quests/auroramc-quests-shared/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-quests/auroramc-quests-shared/pom.xml
@@ -11,6 +11,12 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>pl.auroramc</groupId>
+      <artifactId>auroramc-registry-shared</artifactId>
+      <scope>provided</scope>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <artifactId>adventure-api</artifactId>
       <groupId>net.kyori</groupId>
       <scope>provided</scope>
