--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -17,7 +17,7 @@
     <module>auroramc-auctions</module>
     <module>auroramc-bazaars</module>
     <module>auroramc-cheque</module>
-    <module>auroramc-daily-rewards</module>
+    <module>auroramc-bounty</module>
     <module>auroramc-economy</module>
     <module>auroramc-essentials</module>
     <module>auroramc-gamble</module>
