--- a/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/auroramc-auth-shared/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/auroramc-auth-shared/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>auroramc-auth-shared</artifactId>
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>pl.auroramc</groupId>
     <artifactId>auroramc-auth</artifactId>
+    <groupId>pl.auroramc</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
-  <artifactId>auroramc-auth-shared</artifactId>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
