--- a/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-proxy/auroramc-auth/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>pl.auroramc</groupId>
-    <artifactId>auroramc-network-plugins-proxy</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-
   <artifactId>auroramc-auth</artifactId>
-  <packaging>pom</packaging>
+  <modelVersion>4.0.0</modelVersion>
+
   <modules>
     <module>auroramc-auth-shared</module>
     <module>auroramc-auth-velocity</module>
   </modules>
+  <packaging>pom</packaging>
+  <parent>
+    <artifactId>auroramc-network-plugins-proxy</artifactId>
+    <groupId>pl.auroramc</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
