--- a/auroramc-network-plugins/auroramc-network-plugins-proxy/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-proxy/pom.xml
@@ -1,42 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>pl.auroramc</groupId>
-    <artifactId>auroramc-network-plugins</artifactId>
-    <version>1.0-SNAPSHOT</version>
-  </parent>
-
   <artifactId>auroramc-network-plugins-proxy</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-<!--    <module>auroramc-auth</module>-->
-  </modules>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <build>
     <plugins>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
         <artifactId>templating-maven-plugin</artifactId>
-        <version>3.0.0</version>
         <executions>
           <execution>
-            <id>filter-src</id>
+            <configuration>
+              <outputDirectory>${project.build.directory}/generated-sources/java-templates
+              </outputDirectory>
+              <sourceDirectory>${basedir}/src/main/java-templates</sourceDirectory>
+            </configuration>
             <goals>
               <goal>filter-sources</goal>
             </goals>
-            <configuration>
-              <sourceDirectory>${basedir}/src/main/java-templates</sourceDirectory>
-              <outputDirectory>${project.build.directory}/generated-sources/java-templates</outputDirectory>
-            </configuration>
+            <id>filter-src</id>
           </execution>
         </executions>
+        <groupId>org.codehaus.mojo</groupId>
+        <version>3.0.0</version>
       </plugin>
     </plugins>
     <resources>
@@ -46,5 +31,21 @@
       </resource>
     </resources>
   </build>
+
+  <modelVersion>4.0.0</modelVersion>
+  <modules>
+    <!--    <module>auroramc-auth</module>-->
+  </modules>
+  <packaging>pom</packaging>
+
+  <parent>
+    <artifactId>auroramc-network-plugins</artifactId>
+    <groupId>pl.auroramc</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
 </project>
