Add bounties functionality, which allows to acquire rewards after spending certain amount of time on server each day

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -16,8 +16,8 @@
   <modules>
     <module>auroramc-auctions</module>
     <module>auroramc-bazaars</module>
+    <module>auroramc-bounties</module>
     <module>auroramc-cheque</module>
-    <module>auroramc-bounty</module>
     <module>auroramc-economy</module>
     <module>auroramc-essentials</module>
     <module>auroramc-gamble</module>
