Use extracted provider entity to reuse that in newly introduced observer entity, which stores state of notifications

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -14,20 +14,20 @@
 
   <modelVersion>4.0.0</modelVersion>
   <modules>
-    <module>auroramc-auctions</module>
-    <module>auroramc-bazaars</module>
-    <module>auroramc-bounties</module>
-    <module>auroramc-cheque</module>
-    <module>auroramc-economy</module>
-    <module>auroramc-essentials</module>
-    <module>auroramc-gamble</module>
-    <module>auroramc-hoppers</module>
-    <module>auroramc-lobby</module>
-    <module>auroramc-quests</module>
+<!--    <module>auroramc-auctions</module>-->
+<!--    <module>auroramc-bazaars</module>-->
+<!--    <module>auroramc-bounties</module>-->
+<!--    <module>auroramc-cheque</module>-->
+<!--    <module>auroramc-economy</module>-->
+<!--    <module>auroramc-essentials</module>-->
+<!--    <module>auroramc-gamble</module>-->
+<!--    <module>auroramc-hoppers</module>-->
+<!--    <module>auroramc-lobby</module>-->
+<!--    <module>auroramc-quests</module>-->
     <module>auroramc-registry</module>
-    <module>auroramc-scoreboard</module>
-    <module>auroramc-shops</module>
-    <module>auroramc-spawners</module>
+<!--    <module>auroramc-scoreboard</module>-->
+<!--    <module>auroramc-shops</module>-->
+<!--    <module>auroramc-spawners</module>-->
   </modules>
   <packaging>pom</packaging>
 
