Add an option to specify language in which messages will be sent to viewer

--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-registry/auroramc-registry-bukkit/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-registry/auroramc-registry-bukkit/pom.xml
@@ -23,6 +23,18 @@
       <version>${dependency.version.juliet}</version>
     </dependency>
     <dependency>
+      <artifactId>litecommands-bukkit</artifactId>
+      <groupId>dev.rollczi</groupId>
+      <scope>compile</scope>
+      <version>${dependency.version.litecommands}</version>
+    </dependency>
+    <dependency>
+      <artifactId>litecommands-adventure-platform</artifactId>
+      <groupId>dev.rollczi</groupId>
+      <scope>compile</scope>
+      <version>${dependency.version.litecommands}</version>
+    </dependency>
+    <dependency>
       <artifactId>caffeine</artifactId>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <scope>provided</scope>
