Fix a lot of issues due to classloader mismatch

--- a/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/pom.xml
@@ -25,7 +25,7 @@
     <!--    <module>auroramc-lobby</module>-->
     <!--    <module>auroramc-quests</module>-->
     <module>auroramc-registry</module>
-    <!--    <module>auroramc-scoreboard</module>-->
+    <module>auroramc-scoreboard</module>
     <!--    <module>auroramc-shops</module>-->
     <!--    <module>auroramc-spawners</module>-->
   </modules>
