--- a/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-scoreboard/pom.xml
+++ b/auroramc-network-plugins/auroramc-network-plugins-server/auroramc-scoreboard/pom.xml
@@ -7,7 +7,7 @@
     <dependency>
       <artifactId>auroramc-integrations-platform-bukkit</artifactId>
       <groupId>pl.auroramc</groupId>
-      <scope>compile</scope>
+      <scope>provided</scope>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -16,12 +16,12 @@
       <scope>provided</scope>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-    <dependency>
-      <artifactId>auroramc-quests-bukkit</artifactId>
-      <groupId>pl.auroramc</groupId>
-      <scope>provided</scope>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <artifactId>auroramc-quests-bukkit</artifactId>-->
+<!--      <groupId>pl.auroramc</groupId>-->
+<!--      <scope>provided</scope>-->
+<!--      <version>1.0-SNAPSHOT</version>-->
+<!--    </dependency>-->
     <dependency>
       <artifactId>fastboard</artifactId>
       <groupId>fr.mrmicky</groupId>
